Fixing alignment and index.

--- a/kifi-backend/modules/shoebox/angular-black/src/keep/keep.styl
+++ b/kifi-backend/modules/shoebox/angular-black/src/keep/keep.styl
@@ -262,7 +262,6 @@ keepBorderRadius = 3px
   font-family: "Georgia", Arial, sans-serif
   font-smoothing: antialiased
   color: textBlackColor
-  word-wrap: break-word
   word-break: break-word
 
 .kf-dyn-positioned
@@ -285,6 +284,8 @@ keepBorderRadius = 3px
   font-smoothing: antialiased
   font-weight: 500
   long-text()
+  max-width: 340px
+  overflow: hidden
 
   .kf-keep.example &
     color: #c6cbd3
